--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.0
-
+  fluttertoast: ^8.0.9
+  google_fonts: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
