--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^1.1.0
   fluttertoast: ^8.0.9
   google_fonts: ^3.0.1
+  provider: ^6.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
