--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   fluttertoast: ^8.0.9
   google_fonts: ^3.0.1
   provider: ^6.0.3
+  anim_search_bar: ^2.0.2
+  buttons_tabbar: ^1.3.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
